2014-03-22  Benno Schulenberg  <bensberg@justemail.net>
	* THANKS - Add some missing translator names, and tweak others.

2014-03-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/chars.c (is_punct_mbchar, mbstrchr) - Elide a variable,
	thus making two ifs identical to six others.
	* doc/syntax/nanorc.nanorc - Add the 'extendsyntax' directive,
	and change two colours to be legible on a light background.

2014-03-19  Benno Schulenberg  <bensberg@justemail.net>
	* doc/nanorc.sample.in - Document the changed whitespace defaults.
	* src/global.c, doc/man/nanorc.5 - Allow softwrap to be rebound.
	* doc/nanorc.sample.in - Sort the includes alphabetically, and
	add the ones for Lua, Magicpoint, and Spec files.
	* doc/nanorc.sample.in - Add "poslog", plus tiny textual tweaks.
	* src/global.c, doc/man/nanorc.5 - Group softwrap with the toggles
	that affect how things look -- it does not belong in the group of
	general program functions, nor in the group of editing behaviour.
	* doc/man/nanorc.5 - Add the descriptions of six missing bindable
	functions, and tweak those of a few others.

2014-03-18  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init) - In the file browser one cannot
	search for a regular expression, so do not mention it.

2014-03-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init) - Show ^F and ^B instead of kright
	and kleft in the help lines of the tiny version.
	* src/global.c (shortcut_init) - Remove some inconsistent spaces
	and newlines, condense three statements into one, place an #endif
	better, melt two #ifndefs into one, and add a comment.
	* src/winio.c (edit_scroll) - Remove the old softwrap scrolling code.
	* src/{nano.h,proto.h,color.c,cut.c,files.c,global.c,help.c,nano.c,
	search.c,text.c,utils.c} - Add, fix, and remove some #endif comments,
	remove an obsolete comment, and remove some superfluous #ifndefs.
	* src/global.c (shortcut_init) - Put ^B and ^F in the same order as